# Terrain-Traversability-Analysis-framework

ros_framework_updated/: README.md  README.txt
ros_framework_updated/nodes/: appearance_based_node.py  filter2.py  final_node.py  framework.launch.py  geometry_based_node.py  map_converter.py  publisher_node.py
ros_framework_updated/utils/: Unet_other_version.py  package.xml  setup.cfg  setup.py  utils_app_node.py
